1999-07-08    <stanton@scriptics.com>

	* win/Makefile.in: Added tcltest target so runtest works
	properly.  Added missing names to the clean/distclean targets.

	* tests/reg.test: 
	* generic/rege_dfa.c: Applied fix supplied by Henry Spencer for
	bug in DFA state caching under lookahead conditions.  [Bug: 2318]

1999-07-07    <stanton@scriptics.com>

	* doc/fconfigure.n: Clarified default buffering behavior for the
	standard channels. [Bug: 2335]

1999-07-06    <redman@scriptics.com>

	* win/tclWinSerial.c:  New implementation of serial port driver
	from Rolf Shroedter (Rolf.Schroedter@dlr.de) that allows more than
	one byte to be read from the port.  Implemented using polling
	instead of threads, there is a max. 10ms latency between checking the
	port for file events.  [Bug: 1980 2217]

1999-07-06    <welch@scriptics.com>

	* library/http2.0/http.tcl: Fixed the -timeout option so it
	handles timeouts that occur during connection attempts to
	hosts that are down (the only case that really matters!)

1999-07-03    <welch@scriptics.com>

	* doc/ChnlStack.3:
	* generic/tcl.decls:
	* generic/tclIO.c: Added a new variant of the "Trf patch"
	from Andreas Kupres that adds new C APIs Tcl_StackChannel,
	Tcl_UnstackChannel, and Tcl_GetStackedChannel.

1999-07-03    <welch@scriptics.com>

	* generic/tclNotify.c:
	* unix/tclUnixNotfy.c:
	* unix/tclXtTest.c:
	* unix/tclXtNotify.c:
	* win/tclWinNotify.c:
	* mac/tclMacNotify.c: Added Tcl_SetNotifier and the associated
	hook points in the notifiers to be able to replace the notifier
	calls at runtime  The Xt notifier and test program use this hook.

1999-07-03    <welch@scriptics.com>

	* generic/tclParse.c: Changed parsing of variable names to
	allow empty array names.  Now "$(foo)" is a variable reference!
	Previous you had to use something like $::(foo), which is slower.
	This change is requested by Jean-Luc Fontaine for his STOOOP
	package.

1999-07-01    <redman@scriptics.com>

	* generic/tclCmdAH.c: